Merge pull request #1000 from OSGP/feature/secret_management_performance
Fix some performance issues in secret management